# ZeroM

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.txt  README.md  mainbuild.sh
.github/workflows/: build.yml
GameMod/: .gitignore  CMakeLists.txt.default  build.sh  build_step1.sh  build_step2.sh  build_step3.sh  full_build.sh  gamemodexports.yml.default
GameMod/include/: gamemod.h  gamemodvars.h  item.h  player.h
GameMod/src/: main.c
PluginReload/: CMakeLists.txt  main.c  user.c  user.yml
PluginReload/include/: pluginreload.h
ZeroM-base/: .gitignore  CMakeLists.txt  customitem.h  eboot.bin.elf.h  font.h  gamemodloader.c  gamemodloader.h  hash.c  hash.h  hooks.c  hooks.h  log.c  log.h  mem.c  mem.h  menu.c  menu.h  navigation.c  navigation.h  patches.h  renderer.c  renderer.h  testhooks.c  testhooks.h  user.c  user.yml  version.h
ZeroM-base/PluginReload/: CMakeLists.txt  PluginReload.yml  main.c
ZeroM-base/gamemod/: CMakeLists.txt  CMakeLists.txt.default  build.sh  exports.yml
ZeroM-base/gamemod/include/: player.h
ZeroM-base/gamemod/src/: gamemod.c
ZeroM-base/include/: customitem.h  gamemodloader.h  helperfunctions.h  hooks.h  menu.h  version.h
ZeroM-base/sample/plugin/: CMakeLists.txt  gamemod.yml
ZeroM-base/sample/plugin/src/: gamemod.c  gamemod.h  main.c  menuitems.h  player.h
ZeroM-base/src/: customitem.c  gamemodloader.c  hooks.c  log.c  menu.c  patches.c  testhooks.c  user.c
ZeroM-base/structures/: menuitems.h  player.h
common/: pluginreload.h
common/include/: item.h  player.h  resourcelocation.h  wstring.h
common/src/: resourcelocation.c  wstring.c
scripts/: .gitignore  build_gamemod.sh  build_vitarsslibdl.sh  build_zerom.sh  do_it_all.sh  eplugin_reload_upload.sh  gamemod_full.sh  make_release.sh  makerelease.sh  netcat_listen.sh  plugin_reload_build.sh  pluginreload_full.sh  run_zerom_all.sh  sampleplugin.sh  upload_gamemod.sh  upload_zerom.sh  zerom_build.sh  zerom_full.sh
